--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -165,6 +165,10 @@ header.hero {
   grid-gap: 0;
   align-items: center;
 
+  @media ( max-width: 900px ) {
+    grid-template-columns: 1fr;
+  }
+
   .col-left {
     grid-column: 1 / 7; 
     grid-row: 1; 
@@ -173,7 +177,7 @@ header.hero {
     background: barcamp-color('midnight') url(../images/plus-texture.svg) no-repeat right center;
 
     @media ( max-width: 900px ) {
-      grid-column: 1 / -1; 
+      padding: $base-unit*2;
     }
 
     .logo {
