Added footer. Added Holly Sprinkel talk.

--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -97,7 +97,8 @@ Grid stuff
 .where-is-barcamp,
 .our-tracks,
 .our-sessions,
-.our-sponsors {
+.our-sponsors,
+footer {
   max-width: 1440px;
   margin: 64px auto;
   display: grid;
@@ -811,64 +812,12 @@ Our Sessions
         }
   
       }
-
   
-      /*
-      &--simone-seely .session_vr {
-        background: barcamp-color('specter') url(../images/simone-seely.jpg) no-repeat;
+      &--holly .session_vr {
+        background: barcamp-color('specter') url(../images/holly.jpg) no-repeat;
         background-size: cover;
         background-position: center;
       }
-  
-      &--michelle-brownstein .session_vr {
-        background: barcamp-color('specter') url(../images/michelle-brownstein.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--amie-kreppel .session_vr {
-        background: barcamp-color('specter') url(../images/amie-kreppel.jpeg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--sebastian-ellios .session_vr {
-        background: barcamp-color('specter') url(../images/sebastian-ellios.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--aaron-feickert .session_vr {
-        background: barcamp-color('specter') url(../images/aaron-feickert.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--usha-suryadevara .session_vr {
-        background: barcamp-color('specter') url(../images/usha-suryadevara.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--duncan-kabinu .session_vr {
-        background: barcamp-color('specter') url(../images/duncan-kabinu.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--mark-oelke .session_vr {
-        background: barcamp-color('specter') url(../images/mark-oelke.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-  
-      &--justin-doan .session_vr {
-        background: barcamp-color('specter') url(../images/justin-doan.jpg) no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-
-      */
     
     }
 
@@ -933,6 +882,73 @@ Footer
 -------------------------------*/
 
 footer {
+  align-content: center;
+  color: #fff;
+  margin-bottom: 0;
+  padding: $base-unit*2 $base-unit*2 $base-unit*2 $base-unit*8;
+  background: barcamp-color('midnight') inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="50" height="44" viewBox="0 0 50 44"><path fill="#ffffff" d="M23.1111447,18.2281045 C25.8580189,17.0945975 25.9675919,12.7712132 24.7475235,10.5165006 C23.1111447,7.49255874 18.9797092,7.99506099 16.1904089,8.78432945 C16.9635665,6.58576639 18.382002,3.58252516 20.9436043,3.14853993 C23.4869667,2.71772924 25.9767452,4.28072418 28.1886494,5.29340046 C30.1636354,6.19893622 33.6360964,7.3350225 35.0624158,4.86523521 C35.49563,3.82279768 34.2089493,2.96382175 33.0808154,2.25530549 C31.9553539,1.54745059 30.7567325,0.869304035 29.505329,0.404896196 C56.5983823,-5.28381544 57.3454829,50.9854573 28.6629534,42.9658575 C26.5920242,42.3877616 24.6000677,41.5546449 22.6830752,40.5929596 C25.3614663,40.8131929 28.2467097,40.5322466 30.3900639,38.8123107 C32.2254781,37.3397238 33.1943971,34.2680317 30.1701831,33.5543568 C27.4519716,32.9130349 24.4917642,34.5515573 21.8107674,34.7769492 C18.4348509,35.0604747 15.5561551,35.1444676 13.6366237,32.50934 C15.1222728,32.3259445 16.2725886,31.934551 16.8559311,31.5166368 C17.86594,30.7939674 18.8446137,29.7818864 18.9333411,28.4927611 C19.1049831,26.0255531 17.189995,23.7146909 15.0453045,22.6638541 C14.0535355,22.1788118 12.8666731,22.0057336 11.7953301,22.3182929 C10.4153787,22.7213264 10.017375,23.9000044 9.0510616,24.8062015 C8.10499252,25.6929546 7.22152702,26.3420145 5.91792267,26.5997469 C4.39766449,26.8658125 2.92825084,26.143077 1.75710283,25.244684 C1.11702964,24.7519037 0.572218124,24.1558189 0,23.589363 C2.4441521,23.9349242 5.70258505,24.5587863 7.13473721,21.8442292 C8.28638924,19.6606129 6.91946641,17.1779291 8.13692903,14.9684535 C9.70094959,12.1324706 13.6692283,14.3548426 15.6181574,15.4689717 C17.8541809,16.7477797 20.080383,19.4771513 23.1111447,18.2281045 Z M36.1932265,29.7824833 C37.7294662,27.5812813 38.5416667,25.0049722 38.5416667,22.3318168 C38.5416667,19.7163753 37.7638398,17.1874716 36.2918927,15.0196242 C35.9854559,14.5682219 35.3660666,14.4476728 34.9083063,14.7496364 C34.4505459,15.0529131 34.3284765,15.6653101 34.6349798,16.1167125 C35.8861249,17.958828 36.5470683,20.1081597 36.5470683,22.3318168 C36.5470683,24.603536 35.8569372,26.7932477 34.5512067,28.664253 C34.238919,29.1124381 34.3525447,29.725426 34.8063823,30.0344807 C35.259555,30.3428788 35.8809389,30.2300774 36.1932265,29.7824833 Z M39.3982903,32.9069617 C41.5638844,29.9325457 42.7083333,26.4470539 42.7083333,22.8274492 C42.7083333,19.2880493 41.6113036,15.8674445 39.5365906,12.936681 C39.2159033,12.484707 38.5691133,12.3640053 38.0911024,12.6670087 C37.6130915,12.970012 37.4856219,13.5831846 37.8063787,14.0351585 C39.6505217,16.6403693 40.6254973,19.6803298 40.6254973,22.8274492 C40.6254973,26.0458325 39.6085179,29.1441716 37.6843245,31.7873154 C37.3575275,32.236068 37.4768046,32.8498322 37.9507887,33.1592782 C38.4233147,33.4680669 39.0721876,33.3550569 39.3982903,32.9069617 Z M42.0193943,10.9260992 C44.4647751,14.2906522 45.7573901,18.217458 45.7573901,22.2823702 C45.7573901,26.4380476 44.40849,30.4400151 41.8577365,33.8552293 C41.518946,34.3084576 41.6426726,34.9283433 42.13398,35.2408756 C42.6245676,35.552744 43.2972542,35.4386069 43.6346052,34.9860426 C46.4363386,31.2362522 47.9166667,26.8439346 47.9166667,22.2823702 C47.9166667,17.820601 46.4982379,13.5100186 43.8124576,9.8166659 C43.4807208,9.35952014 42.8094737,9.2376146 42.3146394,9.54363999 C41.8198052,9.85032936 41.6876575,10.4689535 42.0193943,10.9260992 Z"/></svg>') no-repeat 32px center;
+
+
+  b {
+    display: block;
+    font-weight: 400;
+    font-size: 1.8rem;
+    margin-bottom: $base-unit;
+  }
+
+  p {
+    font-size: 1.8rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .col-left {
+    grid-column: 1 / 5; 
+
+    @media ( max-width: 900px ) {
+      grid-column: 1 / -1; 
+      grid-row: 1;
+    }
+
+  }
+
+  .col-right {
+    grid-column: 5 / 8; 
+
+    ul {
+      padding: 0;
+      margin: 0 0 $base-unit 0;
+      list-style-type: none;
+  
+      li {
+        display: inline-block;
+        margin: 0 $base-unit;
+  
+        &:first-child {
+          margin-left: 0;
+        }
+
+        a:before,
+        a:after {
+          display: none;
+        }
+  
+      }
+    } 
+    
+    @media ( max-width: 900px ) {
+      padding-top: $base-unit;
+      grid-column: 1 / -1; 
+      grid-row: 2;
+    }
+    
+  }
+
+}
+
+/*
+
+footer {
   grid-column-start: 1;
   grid-column-end: 10;
   padding: $base-unit*2;
@@ -991,6 +1007,8 @@ footer {
   }
 
 }
+
+*/
 
 /*------------------------------
 Miscellaneous
