Derek Helmick talk added. Fixed incrrect link in the footer.

--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -818,6 +818,12 @@ Our Sessions
         background-size: cover;
         background-position: center;
       }
+
+      &--derek .session_vr {
+        background: barcamp-color('specter') url(../images/derek.jpg) no-repeat;
+        background-size: cover;
+        background-position: center;
+      }
     
     }
 
